# DeepRepo

./: .gitignore  README.md  main.py  pyproject.toml
repo/backend/: auth.py  db.py
repo/frontend/: app.js  index.html  style.css
src/: config.py
src/chunking/: chunk.py  chunker.py
src/embeddings/: embedder.py
src/graph/: ast_parser.py  context_expander.py  dependency_graph.py  flow_retriever.py  graph_builder.py  graph_retriever.py  symbol_table.py
src/ingestion/: document.py  exporter.py  loader.py
src/llm/: llm.py
src/prompt/: prompt_builder.py
src/query/: query_expander.py
src/reranking/: reranker.py
src/retrieval/: bm25_store.py  chroma_store.py  hybrid_retriever.py  metadata_filter.py
src/utils/: config.py
