[project]
name = "deeprepo"
version = "0.1.0"
description = ""
authors = [
    {name = "Zainab Manzoor",email = "zainabmanzoorzoor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb (>=1.5.9,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "openai (>=2.43.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)"
]

[tool.poetry]
packages = [{include = "deeprepo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
